k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ensembl-tools-api-svc
  labels:
    app: ensembl-tools-api-svc
spec:
  selector:
    app: ensembl-tools-api
  type: ClusterIP
  ports:
    - name: tools-api
      port: 8013
      protocol: TCP
      targetPort: 8013
