k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ensembl-tools-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: HOST
    http:
      paths:
        - path: /api/tools/(.*)
          backend:
            serviceName: ensembl-tools-api-svc
            servicePort: 8013
